--- a/css/custom_bootstrap.css
+++ b/css/custom_bootstrap.css
@@ -1,7 +1,7 @@
 body
 {   
     margin: 0;
-    background-image: url(../images/background.jpg);
+    background-image: url(background2.jpg) ;
     padding-top: 50px !important;
     background-attachment: fixed;
 }
@@ -61,6 +61,27 @@ a:hover
     padding-left: 50px;
     
 }
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+  }
+  .facebook{
+      color:  	#3b5998;
+  }
+  .fa:hover {
+    opacity: 0.7;
+  }
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  .footer{
+      background-color: #222222 !important;
+  }
+  
 
 @media (max-width: 900px)
 {   
@@ -242,7 +263,4 @@ margin-top:15px;
       .vl{
           height:1090px;
       }
-  }
-  .food{
-    background-color: #222222;
   }
