--- a/css/custom_bootstrap.css
+++ b/css/custom_bootstrap.css
@@ -1,7 +1,7 @@
 body
 {   
     margin: 0;
-    background-image: url(background2.jpg) ;
+    background-image: url(images/background3.jpg) ;
     padding-top: 50px !important;
     background-attachment: fixed;
 }
