--- a/css/custom_bootstrap.css
+++ b/css/custom_bootstrap.css
@@ -1,10 +1,15 @@
 body
 {   
     margin: 0;
-    background-image: url(images/background3.jpg) ;
+
+    background-image: url(../images/background8_1920x1080.jpg);
+
+
+
     padding-top: 50px !important;
     background-attachment: fixed;
-}
+    
+    }
 .menuPad
 {
     padding-top: 20px !important;
